[package]
name = "memory-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive-getters = "0.3.0"
diesel = { version = "2.1.0", features = ["sqlite"] }
dotenvy = "0.15.7"
uuid = { version = "1.4.0", features = ["v4"] }
