[package]
name = "memory-assistant"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.29"
derive-getters = "0.3.0"
diesel = { version = "2.1.0", features = ["sqlite", "extras", "chrono"] }
dotenvy = "0.15.7"
rand = "0.8.5"
uuid = { version = "1.4.0", features = ["v4"] }
